# spurGearSolver

./: CLAUDE.md  LICENSE  README.md  gears.json  pyproject.toml
src/spur_gear_solver/: __init__.py  cli.py  loader.py  models.py  solver.py
