[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spur-gear-solver"
version = "0.1.0"
description = "Find optimal spur gear combinations for a target reduction ratio"
requires-python = ">=3.10"

[project.scripts]
spur-gear-solve = "spur_gear_solver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
